- Added updated auspice.conf from Rocko since previous one was outdated (#0002147).
- Recoded the config parsing code 
  - The new system is much faster, for the programmers out there, the
    old system averaged O(MN) where N was the number of sub-directives for a block, and
    M was the number of sub-directives actually contained in the block in the config file.
    The new system averages O(N), so the number of sub-directives no longer has a significant
    impact on performance.
  - Added duplicate config entry detection (#0002126) suggested by brain2
  - May have a few bugs (easily fixed)
- Corrected numerous -Wall warnings
- Fixed a bug with /rehash and classes due to the config parser rewrite
- Modified the module symbol dependency code to do more accurate searching for the module
  that contains the necessary symbol (#0002123) suggested by Xuefer.
  - Unreal will now prepend the pathname to the module and append the appropriate extension
    (.so or .dll) to the end)
  - The new module system version is "3.2.3" to allow for backwards compatibility
- Documented the default behavior of snomasks when /mode nick +s is used (#0002141) suggested
  by Bugz.
- Added "const" to the functions in match.c, (#0002116) suggested by Xuefer.
- Made ./Config better handle command line arguments
- Removed NAZIISH_CHBAN_HANDLING as it didn't do anything
- Added -advanced flag to ./Config to configure advanced options (#0002145) suggested by
  Bugz. As a result, some config.h options are now in ./Config -advanced.
- Small fix for above
- Added the ability to specify a botmotd and opermotd in a tld {} (#0000176) suggested by
  swissSolaris.
- Fixed crashbug on /rehash due to config rewrite, also made DEBUGMODE working again.
- Removed an excess space from the SAMODE notice when a mode without a parameter was set
  (#0002134) reported by Bugz.
- Fixed small memory leak on /rehash (post-3.2.2).
- Fixed botmotd crash due to last change (post-3.2.2).