@@ -5,11 +5,11 @@ you like Unreal, and you'd like to see it continue to exist, please consider mak
 a donation. We're not asking for anything huge, whatever you can afford is fine.
 
 PayPal Donation Link:
-<https://www.paypal.com/xclick/business=donation%40unrealircd.com&
+<https://www.paypal.com/xclick/business=donation%40unrealircd.org&
 item_name=UnrealIRCd+Donation&no_shipping=1&cn=Comments&tax=0&currency_code=USD>
 
 Or simply send a payment through PayPal to:
-donation@unrealircd.com
+donation@unrealircd.org
 
 If you don't want to use PayPal, or you want to donate something other than money
 (old computer hardware, etc.), contact Stskeeps (stskeeps@unrealircd.com) and send
