@@ -280,6 +280,7 @@ help Who {
 	" G - User is /away (gone)";
 	" H - User is not /away (here)";
 	" r - User is using a registered nickname";
+	" B - User is a bot (+B)";
 	" * - User is an IRC Operator";
 	" ~ - User is a Channel Owner (+q)";
 	" & - User is a Channel Admin (+a)";
